# esp32_components

./: README.md
audio_rec/: CMakeLists.txt  README.md
audio_rec/example/: test.c
audio_rec/include/: audio_rec.h
audio_rec/src/: audio_rec.c
base64/: CMakeLists.txt
bsp_uart/: CMakeLists.txt
bsp_uart/example/: example.c
ch390/: idf_component.yml
ch390/src/: esp_eth_phy_ch390.c
ch422/: CMakeLists.txt
ch422/include/: ch422.h
ch422/src/: ch422.c
chipintelli_ota/: CMakeLists.txt  READMD.md  README.md  chip_ota.c  chip_ota.h  component.mk  text.c
chipintelli_ota/inlcude/: chip_ota.h
chipintelli_ota/src/: chip_ota.c
crc16/: CMakeLists.txt
esp_context/: CMakeLists.txt  README.md
esp_context/include/: esp_context.h
esp_context/src/: esp_context.c
esp_gmssl/: CMakeLists.txt  README.md
esp_gmssl/example/: example.c
esp_gmssl/include/: gcm.h  sm4.h  sm4_lcl.h
esp_gmssl/src/: aes.c  aes_modes.c  block_cipher.c  gcm.c  gf128.c  hex.c  rand.c  sm4_enc.c  sm4_modes.c  sm4_setkey.c  version.c
eth/: CMakeLists.txt  Kconfig.projbuild  README.md  eth.c  eth.h
gzip_deflate/: CMakeLists.txt  README.md
gzip_deflate/example/: example.c
gzip_deflate/include/: gzip_deflate.h
gzip_deflate/src/: gzip_deflate.c
gzip_inflate/: CMakeLists.txt
gzip_inflate/example/: example.c
gzip_inflate/include/: gzip_inflate.h
http_ota/: CMakeLists.txt  README.md  component.mk
http_sdmmc/: CMakeLists.txt
http_upgrade/: CMakeLists.txt  README.md
log_svr/: CMakeLists.txt  README.md
ltr303/: CMakeLists.txt
mc3416/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml  mc3416.c
mqtt_client/: CMakeLists.txt
mqtt_tcp_client/: CMakeLists.txt
mutex/: CMakeLists.txt
player/: CMakeLists.txt  README.md  file_manager.c  player.c  player.h  pwm_audio.c
prefs/: CMakeLists.txt  prefs.c
prefs/example/: test.c
prefs/include/: prefs.h
prefs/src/: prefs.c
protocol_common/: Kconfig.projbuild  README.md  connect.c  eth_connect.c
rapidjson/: CMakeLists.txt
rb_log/: CMakeLists.txt  README.md
sys/: CMakeLists.txt
ticker/: CMakeLists.txt
tone_player/: CMakeLists.txt  README.md
tone_player/include/: audio_tone_uri.h  tone_player.h
tone_player/src/: tone_player.c
tone_player/tools/: audio_tone_uri.c
udp_music/: CMakeLists.txt  README.md
udp_stream/: CMakeLists.txt
update/: CMakeLists.txt
utils_sntp/: CMakeLists.txt
vm_spi/: CMakeLists.txt
wiegand/: CMakeLists.txt
wifi/: CMakeLists.txt
ws_cli_audio/: CMakeLists.txt
ws_cli_camera/: CMakeLists.txt
ws_client/: CMakeLists.txt
(+70 files in other folders)
